add leave one out eval

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,10 +23,10 @@
         "--loss_type", "scale_shift",
         "--input_size", "224",
         "--scene_sampling", "2",
-        "--train_dataset", "spaq",
-        "--test_dataset", "spaq",
-        "--test_dataset", "csiq",
-        "--exp_type", "cross-set",
+        "--train_dataset", "kadid10k",
+        "--test_dataset", "kadid10k",
+        // "--exp_type", "cross-set",
+        "--exp_type", "leave-one-out",
       ],
       "env": {
           "CUDA_VISIBLE_DEVICES": "1"
