--- a/sota/IQA-PyTorch/options/train/HyperNet/train_HyperNet_spaq.yml
+++ b/sota/IQA-PyTorch/options/train/HyperNet/train_HyperNet_spaq.yml
@@ -1,17 +1,17 @@
 # general settings
 # name: debug_DBCNN_LIVEC
-name: dbcnn_koniq10k
-model_type: DBCNNModel
+name: hypernet_spaq
+model_type: GeneralIQAModel 
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
 
 # dataset and data loader settings
 datasets:
   train:
-    name: koniq10k
+    name: spaq
     type: GeneralJSONDataset
     dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/train/koniq10k_train.json
+    meta_info_file: ./data_json/for_cross_set/train/spaq_train.json
     # split_file: ./datasets/meta_info/koniq10k_official.pkl
     mos_range: [0, 100]
     lower_better: false 
@@ -19,15 +19,17 @@ datasets:
 
     augment:
       hflip: true
-      random_crop: 384
+      random_crop: 224
     img_range: 1
 
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 4
-    batch_size_per_gpu: 8
+    batch_size_per_gpu: 96
     dataset_enlarge_ratio: 1
-    prefetch_mode: ~
+
+    prefetch_mode: cpu
+    num_prefetch_queue: 128
 
   val_0:
     name: koniq10k
@@ -85,7 +87,7 @@ datasets:
 
 # network structures
 network:
-  type: DBCNN
+  type: HyperNet
   pretrained: false
 
 # path
@@ -97,38 +99,30 @@ path:
 # training settings
 train:
   optim:
-    type: SGD
-    lr: !!float 1e-3
-    momentum: 0.9
-    weight_decay: !!float 5e-4
-
-  optim_finetune:
-    type: Adam
-    lr: !!float 1e-5
+    type: AdamW
+    lr: !!float 2e-4
     weight_decay: !!float 5e-4
 
   scheduler:
     type: MultiStepLR
-    milestones: [1000]
-    gamma: 1
+    milestones: [5, 10]
+    gamma: 0.1
 
-  scheduler_finetune:
-    type: MultiStepLR
-    milestones: [1000]
-    gamma: 1
-
-  total_iter: 20000 # 883 iter/epoch, train/finetune for about 30 epochs
-  finetune_start_iter: 10000
+  total_epoch: 15 
   warmup_iter: -1  # no warm up
 
   # losses
   mos_loss_opt:
-    type: MSELoss
+    type: L1Loss 
     loss_weight: !!float 1.0
   
+  metric_loss_opt:
+    type: NiNLoss 
+    loss_weight: !!float 1.0
+
 # validation settings
 val:
-  val_freq: !!float 800
+  val_freq: !!float 1000
   save_img: false
   pbar: true
 
@@ -146,6 +140,7 @@ val:
 # logging settings
 logger:
   print_freq: 100
+  save_checkpoint_freq: !!float 5e9
   save_latest_freq: !!float 5e2
   use_tb_logger: true
   wandb:
