--- a/sota/IQA-PyTorch/options/train/CLIPIQA/train_CLIPIQA_spaq.yml
+++ b/sota/IQA-PyTorch/options/train/CLIPIQA/train_CLIPIQA_spaq.yml
@@ -1,23 +1,24 @@
 # general settings
 # name: debug_DBCNN_LIVEC
-name: dbcnn_koniq10k
-model_type: DBCNNModel
+name: clipiqa_spaq
+model_type: GeneralIQAModel
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
 
 # dataset and data loader settings
 datasets:
   train:
-    name: koniq10k
+    name: spaq
     type: GeneralJSONDataset
     dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/train/koniq10k_train.json
+    meta_info_file: ./data_json/for_cross_set/train/spaq_train.json
     # split_file: ./datasets/meta_info/koniq10k_official.pkl
     mos_range: [0, 100]
     lower_better: false 
-    mos_normalize: false
+    mos_normalize: true
 
     augment:
+      resize: 768
       hflip: true
       random_crop: 384
     img_range: 1
@@ -25,7 +26,7 @@ datasets:
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 4
-    batch_size_per_gpu: 8
+    batch_size_per_gpu: 64
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
@@ -83,10 +84,17 @@ datasets:
     augment:
       resize: 768
 
+    # augment:
+    #   center_crop: 384
+
 # network structures
 network:
-  type: DBCNN
+  type: CLIPIQA 
+  model_type: clipiqa+
+  # backbone: ViT-L/14
+  backbone: RN50
   pretrained: false
+  pos_embedding: false
 
 # path
 path:
@@ -97,38 +105,30 @@ path:
 # training settings
 train:
   optim:
-    type: SGD
-    lr: !!float 1e-3
-    momentum: 0.9
-    weight_decay: !!float 5e-4
-
-  optim_finetune:
-    type: Adam
-    lr: !!float 1e-5
-    weight_decay: !!float 5e-4
-
+    type: Adam 
+    lr: !!float 2e-3
+  
   scheduler:
-    type: MultiStepLR
-    milestones: [1000]
-    gamma: 1
+    type: CosineAnnealingLR
+    T_max: 50 
+    eta_min: 0
 
-  scheduler_finetune:
-    type: MultiStepLR
-    milestones: [1000]
-    gamma: 1
-
-  total_iter: 20000 # 883 iter/epoch, train/finetune for about 30 epochs
-  finetune_start_iter: 10000
+  # total_iter: 2000000
+  total_epoch: 50 
   warmup_iter: -1  # no warm up
 
   # losses
   mos_loss_opt:
     type: MSELoss
     loss_weight: !!float 1.0
-  
+
+  metric_loss_opt:
+    type: PLCCLoss
+    loss_weight: !!float 1.0
+
 # validation settings
 val:
-  val_freq: !!float 800
+  val_freq: !!float 500
   save_img: false
   pbar: true
 
@@ -140,13 +140,11 @@ val:
     plcc:
       type: calculate_plcc
 
-    krcc:
-      type: calculate_krcc
-
 # logging settings
 logger:
   print_freq: 100
-  save_latest_freq: !!float 5e2
+  save_latest_freq: !!float 1e3 
+  log_imgs_freq: 1000
   use_tb_logger: true
   wandb:
     project: ~
@@ -156,3 +154,5 @@ logger:
 dist_params:
   backend: nccl
   port: 29500
+
+find_unused_parameters: True
