--- a/sota/IQA-PyTorch/options/train/DBCNN/leave_one_out_train_DBCNN.yml
+++ b/sota/IQA-PyTorch/options/train/DBCNN/leave_one_out_train_DBCNN.yml
@@ -1,6 +1,6 @@
 # general settings
 # name: debug_DBCNN_LIVEC
-name: dbcnn_koniq10k
+name: 003_DBCNN_KonIQ10k
 model_type: DBCNNModel
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
@@ -15,7 +15,7 @@ datasets:
     # split_file: ./datasets/meta_info/koniq10k_official.pkl
     mos_range: [0, 100]
     lower_better: false 
-    mos_normalize: false
+    mos_normalize: true
 
     augment:
       hflip: true
@@ -29,59 +29,12 @@ datasets:
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
-  val_0:
+  val:
     name: koniq10k
     type: GeneralJSONDataset
     dataroot_target: ./data
     meta_info_file: ./data_json/for_cross_set/test/koniq10k_test.json
-  val_1:
-    name: spaq
-    type: GeneralJSONDataset
-    dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/test/spaq_test.json
-    augment:
-      resize: 768
-  val_2:
-    name: livec
-    type: GeneralJSONDataset
-    dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/test/livec.json
-  val_3:
-    name: agiqa3k
-    type: GeneralJSONDataset
-    dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/test/agiqa3k.json
-  val_4:
-    name: kadid10k
-    type: GeneralJSONDataset
-    dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/test/kadid10k_test.json
-  val_5:
-    name: live
-    type: GeneralJSONDataset
-    dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/test/live.json
-    lower_better: true 
-  val_6:
-    name: csiq
-    type: GeneralJSONDataset
-    dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/test/csiq.json
-    lower_better: true 
-  val_7:
-    name: bid
-    type: GeneralJSONDataset
-    dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/test/bid.json
-    augment:
-      resize: 768
-  val_8:
-    name: cid2013
-    type: GeneralJSONDataset
-    dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/test/cid2013.json
-    augment:
-      resize: 768
+    # split_file: ./datasets/meta_info/koniq10k_official.pkl
 
 # network structures
 network:
