--- a/sota/IQA-PyTorch/options/train/DBCNN/train_DBCNN_koniq10k_spaq.yml
+++ b/sota/IQA-PyTorch/options/train/DBCNN/train_DBCNN_koniq10k_spaq.yml
@@ -1,6 +1,6 @@
 # general settings
 # name: debug_DBCNN_LIVEC
-name: dbcnn_koniq10k
+name: dbcnn_koniq10k_spaq
 model_type: DBCNNModel
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
@@ -11,7 +11,7 @@ datasets:
     name: koniq10k
     type: GeneralJSONDataset
     dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/train/koniq10k_train.json
+    meta_info_file: ./data_json/for_cross_set/train/koniq10k_spaq_train.json
     # split_file: ./datasets/meta_info/koniq10k_official.pkl
     mos_range: [0, 100]
     lower_better: false 
