--- a/sota/IQA-PyTorch/options/train/HyperNet/leave_one_out_train_HyperNet.yml
+++ b/sota/IQA-PyTorch/options/train/HyperNet/leave_one_out_train_HyperNet.yml
@@ -1,6 +1,5 @@
 # general settings
-# name: debug001_NIMA
-name: 001_NIMA_inception_koniq
+name: 004_HyperNet_KonIQ10k
 model_type: GeneralIQAModel 
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
@@ -9,51 +8,39 @@ manual_seed: 123
 datasets:
   train:
     name: koniq10k
-    type: GeneralNRDataset
-    dataroot_target: ./datasets/koniq10k/512x384
-    meta_info_file: ./datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: ./datasets/meta_info/koniq10k_official.pkl
+    type: GeneralJSONDataset
+    dataroot_target: ./data
+    meta_info_file: ./data_json/for_leave_one_out/koniq10k/test_for_300_Animal/train.json
+    # split_file: ./datasets/meta_info/koniq10k_official.pkl
     mos_range: [0, 100]
     lower_better: false 
-    mos_normalize: true
+    mos_normalize: false
 
     augment:
-      resize: [330, 330]
-      random_crop: 299 
       hflip: true
+      random_crop: 224
     img_range: 1
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 12
-    batch_size_per_gpu: 64
+    num_worker_per_gpu: 4
+    batch_size_per_gpu: 96
     dataset_enlarge_ratio: 1
+
     prefetch_mode: cpu
-    num_prefetch_queue: 64
+    num_prefetch_queue: 128
 
   val:
     name: koniq10k
-    type: GeneralNRDataset
-    dataroot_target: ./datasets/koniq10k/512x384
-    meta_info_file: ./datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: ./datasets/meta_info/koniq10k_official.pkl
-    mos_range: [0, 100]
-    lower_better: false 
-    mos_normalize: true
+    type: GeneralJSONDataset
+    dataroot_target: ./data
+    meta_info_file: ./data_json/for_leave_one_out/koniq10k/test_for_300_Animal/test.json
+    # split_file: ./datasets/meta_info/koniq10k_official.pkl
 
-    augment:
-      resize: [299, 299]
-
-    num_worker_per_gpu: 8
-    batch_size_per_gpu: 64
-    prefetch_mode: cpu
-    num_prefetch_queue: 8
 
 # network structures
 network:
-  type: NIMA
-  num_classes: 1
-  base_model_name: inception_resnet_v2 
+  type: HyperNet
   pretrained: false
 
 # path
@@ -65,27 +52,30 @@ path:
 # training settings
 train:
   optim:
-    type: Adam
-    lr_base_model: !!float 5e-5
-    lr_classifier: !!float 5e-4
-    lr: !!float 1e-4
+    type: AdamW
+    lr: !!float 2e-4
+    weight_decay: !!float 5e-4
 
   scheduler:
     type: MultiStepLR
-    milestones: [40000]
+    milestones: [5, 10]
     gamma: 0.1
 
-  total_iter: 10000
+  total_epoch: 15 
   warmup_iter: -1  # no warm up
 
   # losses
   mos_loss_opt:
     type: L1Loss 
     loss_weight: !!float 1.0
+  
+  metric_loss_opt:
+    type: NiNLoss 
+    loss_weight: !!float 1.0
 
 # validation settings
 val:
-  val_freq: !!float 300 
+  val_freq: !!float 1000
   save_img: false
   pbar: true
 
@@ -104,7 +94,7 @@ val:
 logger:
   print_freq: 100
   save_checkpoint_freq: !!float 5e9
-  save_latest_freq: !!float 1e3
+  save_latest_freq: !!float 5e2
   use_tb_logger: true
   wandb:
     project: ~
