--- a/sota/IQA-PyTorch/options/train/TOPIQ/train_TOPIQ_res50_spaq.yml
+++ b/sota/IQA-PyTorch/options/train/TOPIQ/train_TOPIQ_res50_spaq.yml
@@ -1,17 +1,23 @@
-# general settings
-# name: debug_DBCNN_LIVEC
-name: dbcnn_koniq10k
-model_type: DBCNNModel
+name: topiq_spaq
+model_type: GeneralIQAModel 
 num_gpu: 1  # set num_gpu: 0 for cpu mode
-manual_seed: 123
+manual_seed: 123 
+
+define: &img_size_oneside 384 
+define: &img_size [*img_size_oneside, *img_size_oneside]
+
+define: &backbone resnet50
+
+define: &train_batch_size 16 
+define: &test_batch_size 1 
 
 # dataset and data loader settings
 datasets:
   train:
-    name: koniq10k
+    name: spaq
     type: GeneralJSONDataset
     dataroot_target: ./data
-    meta_info_file: ./data_json/for_cross_set/train/koniq10k_train.json
+    meta_info_file: ./data_json/for_cross_set/train/spaq_train.json
     # split_file: ./datasets/meta_info/koniq10k_official.pkl
     mos_range: [0, 100]
     lower_better: false 
@@ -19,13 +25,13 @@ datasets:
 
     augment:
       hflip: true
-      random_crop: 384
+      random_crop: *img_size_oneside 
     img_range: 1
 
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 4
-    batch_size_per_gpu: 8
+    batch_size_per_gpu: *train_batch_size
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
@@ -85,68 +91,67 @@ datasets:
 
 # network structures
 network:
-  type: DBCNN
+  type: CFANet 
+  use_ref: false
   pretrained: false
+  num_crop: 1 
+  num_attn_layers: 1
+  crop_size: *img_size
+  semantic_model_name: *backbone
+  block_pool: weighted_avg
 
 # path
 path:
-  pretrain_network_g: ~
   strict_load_g: true
   resume_state: ~
 
 # training settings
 train:
   optim:
-    type: SGD
-    lr: !!float 1e-3
-    momentum: 0.9
-    weight_decay: !!float 5e-4
-
-  optim_finetune:
-    type: Adam
-    lr: !!float 1e-5
-    weight_decay: !!float 5e-4
-
+    type: AdamW
+    lr: !!float 3e-5 
+    weight_decay: !!float 1e-5
+  
   scheduler:
-    type: MultiStepLR
-    milestones: [1000]
-    gamma: 1
+    type: CosineAnnealingLR
+    T_max: 50 
+    eta_min: 0 
+    # type: StepLR 
+    # step_size: !!float 1e9
+    # gamma: 1.0 
 
-  scheduler_finetune:
-    type: MultiStepLR
-    milestones: [1000]
-    gamma: 1
-
-  total_iter: 20000 # 883 iter/epoch, train/finetune for about 30 epochs
-  finetune_start_iter: 10000
+  # total_iter: 20000 
+  total_epoch: 50
   warmup_iter: -1  # no warm up
-
+  
   # losses
   mos_loss_opt:
-    type: MSELoss
+    type: MSELoss 
     loss_weight: !!float 1.0
-  
+
+  metric_loss_opt:
+    type: NiNLoss 
+    loss_weight: !!float 1.0
+
 # validation settings
 val:
-  val_freq: !!float 800
+  val_freq: !!float 800 
   save_img: false
   pbar: true
 
-  key_metric: srcc # if this metric improve, update all metrics. If not specified, each best metric results will be updated separately
+  key_metric: srcc # if this metric improve, update all metrics. If not specified, each best metric results will be updated separately 
   metrics:
-    srcc:
+    srcc: 
       type: calculate_srcc
 
-    plcc:
+    plcc: 
       type: calculate_plcc
-
-    krcc:
-      type: calculate_krcc
 
 # logging settings
 logger:
   print_freq: 100
-  save_latest_freq: !!float 5e2
+  save_latest_freq: !!float 500 
+  log_imgs_freq: 1000
   use_tb_logger: true
   wandb:
     project: ~
@@ -156,3 +161,5 @@ logger:
 dist_params:
   backend: nccl
   port: 29500
+
+find_unused_parameters: False
