--- a/sota/IQA-PyTorch/options/train/NIMA/leave_one_out_train_NIMA.yml
+++ b/sota/IQA-PyTorch/options/train/NIMA/leave_one_out_train_NIMA.yml
@@ -1,53 +1,55 @@
 # general settings
-# name: debug_DBCNN_LIVEC
-name: 003_CLIPIQA_RN50_KonIQ10k
-model_type: GeneralIQAModel
+# name: debug001_NIMA
+name: nima_eva
+model_type: GeneralIQAModel 
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123
 
 # dataset and data loader settings
 datasets:
   train:
-    name: koniq10k
+    name: eva
     type: GeneralJSONDataset
     dataroot_target: ./data
-    meta_info_file: ./data_json/for_leave_one_out/koniq10k/test_for_300_Animal/train.json
-    # split_file: ./datasets/meta_info/koniq10k_official.pkl
-    mos_range: [0, 100]
-    lower_better: false 
-    mos_normalize: false
+    meta_info_file: will/replace/with/real/meta_info/file
+    # split_file: ./datasets/meta_info/ava_official_ilgnet.pkl
+    # split_index: 1 # use official split
 
     augment:
-      resize: 768
+      resize: [330, 330]
+      random_crop: 299 
       hflip: true
-      random_crop: 384 
     img_range: 1
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 4
+    num_worker_per_gpu: 12
     batch_size_per_gpu: 64
     dataset_enlarge_ratio: 1
-    prefetch_mode: ~
+    prefetch_mode: cpu
+    num_prefetch_queue: 8
 
   val:
-    name: koniq10k
+    name: eva
     type: GeneralJSONDataset
     dataroot_target: ./data
-    meta_info_file: ./data_json/for_leave_one_out/koniq10k/test_for_300_Animal/test.json
-    # split_file: ./datasets/meta_info/koniq10k_official.pkl
-    mos_range: [0, 100]
-    lower_better: false 
-    mos_normalize: false
+    meta_info_file: will/replace/with/real/meta_info/file
+    # split_file: ./datasets/meta_info/ava_official_ilgnet.pkl
+    # split_index: 1 # use official split
+
+    augment:
+      resize: [299, 299]
+
+    num_worker_per_gpu: 8
+    batch_size_per_gpu: 64
+    prefetch_mode: cpu
+    num_prefetch_queue: 8
 
 # network structures
 network:
-  type: CLIPIQA 
-  model_type: clipiqa+
-  # backbone: ViT-L/14
-  backbone: RN50
+  type: NIMA
+  base_model_name: inception_resnet_v2 
   pretrained: false
-  pos_embedding: false
 
 # path
 path:
@@ -58,30 +60,27 @@ path:
 # training settings
 train:
   optim:
-    type: Adam 
-    lr: !!float 2e-3
-  
-  scheduler:
-    type: CosineAnnealingLR
-    T_max: 50 
-    eta_min: 0
+    type: Adam
+    lr_base_model: !!float 5e-5
+    lr_classifier: !!float 5e-4
+    lr: !!float 1e-4
 
-  # total_iter: 2000000
-  total_epoch: 50
+  scheduler:
+    type: MultiStepLR
+    milestones: [40000]
+    gamma: 0.1
+
+  total_iter: 20000
   warmup_iter: -1  # no warm up
 
   # losses
   mos_loss_opt:
-    type: MSELoss
-    loss_weight: !!float 1.0
-
-  metric_loss_opt:
-    type: PLCCLoss
+    type: L1Loss
     loss_weight: !!float 1.0
 
 # validation settings
 val:
-  val_freq: !!float 500
+  val_freq: !!float 3e3
   save_img: false
   pbar: true
 
@@ -93,11 +92,14 @@ val:
     plcc:
       type: calculate_plcc
 
+    # krcc:
+    #   type: calculate_krcc
+
 # logging settings
 logger:
   print_freq: 100
-  save_latest_freq: !!float 1e3 
-  log_imgs_freq: 1000
+  save_checkpoint_freq: !!float 5e9
+  save_latest_freq: !!float 1e3
   use_tb_logger: true
   wandb:
     project: ~
@@ -107,5 +109,3 @@ logger:
 dist_params:
   backend: nccl
   port: 29500
-
-find_unused_parameters: True
